@@ -1,5 +1,9 @@
 2005-04-27  Sam Steingold  <sds@gnu.org>
 
+	* utils/modprep.lisp (string-rest): check POS
+
+2005-04-27  Sam Steingold  <sds@gnu.org>
+
 	* utils/modprep.lisp (checker): added slot DELIM
 	(to-C-name, new-checker): accept DELIM
 	* modules/syscalls/calls.c (check_chmod_mode, mknod_type_check):
